# wrenfold-extra-examples

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  environment.yml
.github/workflows/: ci.yml
dependencies/: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  generate_examples.py  pose3.py
examples/ceres_simple_bundle_adjuster/: CMakeLists.txt  README.md  gen_snavely_reprojection_error.py  simple_bundle_adjuster.cc
examples/gtsam_bal/: CMakeLists.txt  gen_bundle_adjustment_factor.py  gtsam_bal.cc
examples/sophus_pose3_interpolation/: CMakeLists.txt  README.md  gen_pose3_interpolation.py  sophus_pose3_interpolation_bench.cc  sophus_pose3_interpolation_test.cc
